# Mimir

./: .gitignore  LICENSE  README.md
apps/Android/: build.gradle  settings.gradle
apps/Android/app/: build.gradle  proguard-rules.pro
apps/Android/app/src/main/: AndroidManifest.xml
apps/Android/app/src/main/res/anim/: arrow_up_animation.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml  slide_up.xml
apps/Android/app/src/main/res/color/: bg_message_incoming.xml  bg_message_outgoing.xml  button_background.xml  switch_thumb_tint.xml  switch_track_tint.xml
apps/Android/app/src/main/res/color-night/: bg_message_incoming.xml  bg_message_outgoing.xml
apps/Android/app/src/main/res/drawable/: bg_rounded.xml  button_play_animator.xml  button_record_cancel.xml  button_rounded.xml  button_rounded_dark.xml  button_rounded_green.xml  button_rounded_red.xml  button_rounded_white.xml  contact_background.xml  contact_no_avatar.xml  contact_no_avatar_small.xml  dialog_frame.xml  edit_rounded.xml  file_icon_background.xml  ic_account_multiple_outline.xml  ic_add_address.xml  ic_alert_circle.xml  ic_arrow_up_right.xml  ic_attachment.xml  ic_block_user.xml  ic_book_edit_outline.xml  ic_camera_plus_outline.xml  ic_chevron_double_down.xml  (+72 more)
apps/Android/app/src/main/res/drawable-night/: contact_background.xml  contact_no_avatar_small.xml  dialog_frame.xml  file_icon_background.xml
apps/Android/app/src/res/drawable/: button_play_animator.xml
apps/Tracker/: Cargo.toml
apps/Tracker/src/: create_db.sql  functions.rs  main.rs  server.rs  storage.rs
(+143 files in other folders)
