[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
authors = ["Revertron <mimir@revertron.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
toml = "0.5.9"
spmc = "0.3.0"
sqlite = "0.30.3"
byteorder = "1.4.3"
ed25519-dalek = "^1.0"